--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-torch==
-numpy==
-pandas==
-pickle==
-pathlib==
-scikit-learn==
-argparse==
-matplotlib==
-pingouin==
+torch==1.13.1+cu117
+numpy==1.23.5
+pandas==2.0.1
+scikit-learn==1.2.2
+argparse==1.1
+matplotlib==3.3.4
+pingouin==0.5.3
+torchmetrics==0.11.4
